Fix sizing issue on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -823,14 +823,6 @@ Additional Styles
 	border: 2px solid;
 	border-radius: 0;
 }
-
-header {
-	position: fixed;
-	z-index: 100;
-	width: 100%;
-	top: 0rem;
-}
-
 }
 
 @media only screen and (max-width: 586px) {
